added: cors to requests removed currency from required tags
