# docs/swagger.json
@@ -70,9 +70,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "A string of success payment",
+                        "description": "Just message that says it was succesfully",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/constants.ResponseWithMessage"
                         }
                     },
                     "500": {
@@ -150,9 +150,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Coming request id of otp to use in next request confirmPayment",
+                        "description": "Just message that says it was succesfully",
                         "schema": {
-                            "$ref": "#/definitions/submitcard.RequestIdResponse"
+                            "$ref": "#/definitions/constants.ResponseWithMessage"
                         }
                     },
                     "400": {
@@ -213,10 +213,6 @@
         },
         "checkstatus.OrderStatusRequest": {
             "type": "object",
-            "required": [
-                "password",
-                "userName"
-            ],
             "properties": {
                 "orderId": {
                     "description": "Order id the same as order number",
@@ -313,13 +309,20 @@
                 }
             }
         },
+        "constants.ResponseWithMessage": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "orderregistration.OrderRegistrationRequest": {
             "type": "object",
             "required": [
                 "amount",
                 "currency",
                 "password",
-                "returnUrl",
                 "userName"
             ],
             "properties": {
@@ -391,14 +394,6 @@
                 },
                 "recurrenceId": {
                     "description": "Identifier for recurring payments (only for recurring payments)",
-                    "type": "string"
-                }
-            }
-        },
-        "submitcard.RequestIdResponse": {
-            "type": "object",
-            "properties": {
-                "request_id": {
                     "type": "string"
                 }
             }
